deixa simples para uso na pratica

--- a/frontend-accreditation-plataform/tsconfig.json
+++ b/frontend-accreditation-plataform/tsconfig.json
@@ -19,6 +19,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".eslintrc.js", "src/pages/api/sendEmail.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".eslintrc.js", "src/shared/hook.ts"],
   "exclude": ["node_modules"]
 }
